# vibe-linter

./: .gitignore  README.md  pyproject.toml
tests/: CLAUDE.md  conftest.py  test_check_edit_hook.py  test_p1_bdd.py  test_p1_ddd.py  test_p1_rdd.py  test_p1_sdd.py  test_p1_spike.py  test_p1_tdd.py  test_p1_tdd_auto.py  test_p1_vibe.py  test_p2_atomic.py  test_p2_cdd.py  test_p2_design_token.py  test_p2_mobile_first.py  test_p2_progressive.py  test_p2_storybook.py  test_p3_api_first.py  test_p3_contract_first.py  test_p3_db_migration.py  test_p3_event_driven.py  test_p3_hexagonal.py  test_p3_perf_optimization.py  test_p4_competitive_analysis.py  test_p4_grounded_theory.py  test_p4_literature_review.py  test_p4_swot.py  test_p4_thematic_analysis.py  test_p5_content_gap.py  test_p5_content_refresh.py  test_p5_keyword_first.py  test_p5_skyscraper.py  test_p5_topic_cluster.py  test_p6_bdd_testing.py  test_p6_exploratory.py  test_p6_risk_based.py  test_p6_sbtm.py  test_p6_shift_left.py  test_p7_active_recall.py  test_p7_feynman.py  (+3 more)
tests/.claude/: settings.json
tests/.vibe/: .loaded
vibe_linter/: __init__.py  cli.py  types.py
vibe_linter/commands/: init.py  load.py  reset.py  setup.py  start.py  stop.py
vibe_linter/compiler/: __init__.py  mermaid.py  parser.py  validator.py
vibe_linter/engine/: __init__.py  executor.py  expression.py  node_loader.py  policy.py
vibe_linter/integrations/: check_edit.py  inject_context.py  mcp_server.py  settings.py
vibe_linter/store/: __init__.py  state.py
vibe_linter/templates/: bugfix.yaml  feature.yaml  tdd.yaml
(+48 files in other folders)
