[project]
name = "vibe-linter"
version = "0.1.0"
description = "Workflow-driven linter for AI-assisted development — a ticket system for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.15"]

[project.scripts]
vibe = "vibe_linter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vibe_linter"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
